fix message z-index

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 3;
 
   font-size: 1.5em;
   line-height: 2em;
